cmake_minimum_required(VERSION 4.0)
project(CSCE_240)

set(CMAKE_CXX_STANDARD 20)

add_executable(CSCE_240 august_25.cpp
        august_27.cpp
        sept_3.cpp
        assignment1_skeleton.cpp
        project1.cpp
        sept_15.cpp
        sept_17.cpp
        sept_29.cpp
        sept_29.h
        CSCE_240_Assignments/Assignment2/main.cpp
        CSCE_240_Assignments/Assignment2/myArray.cpp
        CSCE_240_Assignments/Assignment2/myArray.h
        oct_1_6.cpp
        oct_1_6.h
        CSCE_240_Assignments/Assignment3/Array.cpp
        CSCE_240_Assignments/Assignment3/Array.h
        CSCE_240_Assignments/Assignment3/main.cpp
        myObject.cpp
        myObject.h
        obj_main.cpp
        oct_27.cpp
        CSCE_240_Assignments/Assignment4/myString.cpp
        CSCE_240_Assignments/Assignment4/myString.h
        CSCE_240_Assignments/Assignment4/main.cpp
        mainForObject.cpp
        CSCE_240_Assignments/Assignment5/myString.cpp
        CSCE_240_Assignments/Assignment5/myString.h
        CSCE_240_Assignments/Assignment5/main.cpp
        myObjectTemplate.cpp
        myObjectTemplate.h
)
